# game-list-app

Group28_AMNEsIAGames/: CMakeLists.txt  sqlite3.h:Zone.Identifier
Group28_AMNEsIAGames/include/: Comment.h  Game.h  GameList.h  ListObserver.h  Observer.h  Subject.h  User.h  createuserform.h  database.h  gamesearchform.h  login_handler.h  loginwindow.h  mainwindow.h  pass_protect.h
Group28_AMNEsIAGames/src/: Comment.cpp  Game.cpp  GameList.cpp  Game_Test.cpp  ListObserver.cpp  Observer.cpp  Subject.cpp  Test_GameList.cpp  User.cpp  amnesiaGames.db  createuserform.cpp  createuserform.ui  database.cpp  database_test.cpp  gamesearchform.cpp  gamesearchform.ui  gltest  lhtest  login_handler.cpp  login_handler_test.cpp  loginwindow.cpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  pass_protect.cpp  pass_test.cpp  readme.txt
Group28_AMNEsIAGames/src/test.dSYM/Contents/Resources/DWARF/: test
